kbd-chooser (0.49) UNRELEASED; urgency=low

  * Alastair McKinstry
    - Add initial HP HIL keyboard support
    - prebaseconfig: Only use Unicode Turkish keymaps for first stage
  * Joey Hess
    - Add a blank line to the end of templates-in, so the next file catted to
      it will end up in a different stanza (how fragile..)

 -- Alastair McKinstry <mckinstry@debian.org>  Wed,  7 Apr 2004 22:03:54 +0100

kbd-chooser (0.48) unstable; urgency=low

  * Alastair McKinstry
    - findfile.c: re-include code to decompress keymaps.
      Needed to minimise memory usage.
    - Add Initial DEC keyboard support for mipsel.
   * Updated translations: 
     - Indonesian (id.po) by Parlin Imanuel Toh
     - Turkish (tr.po) by Osman Yüksel
     - Basque (eu.po) by Piarres Beobide Egaña
     - Galician (gl.po) by Héctor Fernández López 
     - Romanian (ro.po) by  Eddy Petrisor

 -- Alastair McKinstry <mckinstry@debian.org>  Mon,  5 Apr 2004 22:11:16 +0100

kbd-chooser (0.47) unstable; urgency=high

  * Alastair McKinstry
    - Fix regression: ensure console-archs always returns a value,
      Closes: #240171.
    - Improved AT-type keyboard detection on 2.6 kernels.
    - Don't offer mac USB keymaps on non-mac USB keyboards.
  * Translations:
    - Bosnian (bs.po) by Safir Šećerović

 -- Alastair McKinstry <mckinstry@debian.org>  Fri, 26 Mar 2004 23:07:41 +0000

kbd-chooser (0.46) unstable; urgency=high

  * Updated translations: 
    - Indonesian (id.po) by Parlin Imanuel Toh
    - Turkish (tr.po) by Osman Yüksel
  * Alastair McKinstry 
    - When using a serial console, ask "keyboard arch" question at low
      priority, defaulting to "none". Closes: #231219.
    - Also try to detect serial consoles from /proc/cmdline, to deal with
      UARTs that don't support TIOCGSERIAL.
    
 -- Alastair McKinstry <mckinstry@debian.org>  Tue, 23 Mar 2004 21:32:00 +0000

kbd-chooser (0.45) unstable; urgency=low

  * Updated translation
    - Russian by Nikolai Prokoschenko
