@@ -6,6 +6,10 @@ kbd-chooser (0.49) UNRELEASED; urgency=low
   * Joey Hess
     - Add a blank line to the end of templates-in, so the next file catted to
       it will end up in a different stanza (how fragile..)
+  * Colin Watson
+    - Fix ADB keymap detection logic: missing
+      /proc/sys/dev/mac_hid/keyboard_sends_linux_keycodes indicates no ADB
+      keymap support in the kernel.
 
  -- Alastair McKinstry <mckinstry@debian.org>  Wed,  7 Apr 2004 22:03:54 +0100
 
